test/Runner/errors/tests/MI/TestSuite/Prepare2.runtime.js
mi("Suite", () => {
	suite("Suite", () => {}, { timeout: "foo"})
});